--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -30,7 +30,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
@@ -39,9 +39,9 @@
     "clsx": "^2.1.1",
     "compromise": "^14.14.4",
     "dayjs": "^1.11.13",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.41.0",
     "geist": "^1.3.0",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.487.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "openai": "^4.86.1",
@@ -58,20 +58,21 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
-    "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
+    "drizzle-kit": "^0.30.6",
+    "eslint": "^9.24.0",
     "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
