--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/ai-mad-lib-generator
 # NEXT_PUBLIC_CLIENTVAR="bar"
 
 OPENAI_API_KEY=""
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
