--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.17.0",
+    "@clerk/themes": "^2.2.35",
     "@hookform/resolvers": "^4.1.3",
     "@next/third-parties": "^15.3.1",
     "@radix-ui/react-accordion": "^1.2.3",
